--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "minsh"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 
 [dependencies]
 hostname = "0.4.1"
 once_cell = "1.21.3"
 rustyline = "17.0.2"
+toml = "0.9.8"
