--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "minsh"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 
 [dependencies]
@@ -8,3 +8,4 @@ hostname = "0.4.1"
 once_cell = "1.21.3"
 rustyline = "17.0.2"
 toml = "0.9.8"
+which = "8.0.0"
